[package]
name = "crdt-sync-server-rs"
version = "0.1.0"
edition = "2024"
description = "Rust WebSocket relay server for crdt-sync with room routing and snapshot hydration"
license = "MIT"

[[bin]]
name = "crdt-sync-server-rs"
path = "src/main.rs"

[dependencies]
crdt-sync = { path = ".." }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
